[tool.poetry]
name = "widget-project"
version = "0.1.0"
description = "Widget for displaying bank operations"
authors = ["Nikita_Kovetskiy <nkoveckij2014@yandex.ru>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true
show_error_codes = true

[tool.isort]
line_length = 119
multi_line_output = 3