[project]
name = "widget-project"
version = "0.1.0"
description = "Widget for displaying bank operations"
authors = [
    {name = "Nikita_Kovetskiy", email = "nkoveckij2014@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
/(\.git|\.venv|build|dist)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true
show_error_codes = true
strict_equality = true
exclude = [
    ".venv/",
    "build/",
    "dist/"
]

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true